--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -1,4 +1,4 @@
-.Person{
+/* .Person{
     width: 60%;
     margin: 16px auto;
     padding: 16px;
@@ -6,3 +6,9 @@
     box-shadow: 0 2px 3px #ccc;
     text-align: center;
 }
+
+@media(min-width: 500px){
+    .Person{
+        widows: 450px;
+    }
+} */
